# curses

./: .env  .gitignore  .rustfmt.toml  .typos.toml  Cargo.toml  README.md  flake.nix  justfile  package.json  pnpm-lock.yaml  vite.config.ts
.config/flakebox/: id
.github/workflows/: build.yml  check.yml  release.yml
.github/workflows/configs/: Tauri.build-pre.toml  Tauri.build.toml
dev-tools/: Cargo.toml  README.md
dev-tools/src/: main.rs
misc/: update.sh
public/: inputfield.html  oauth_twitch.html
public/i18n/en/: translation.json
public/i18n/zh_cn/: translation.json
public/i18n/zh_tw/: translation.json
src/: config.ts  index.tsx  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  Tauri.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: create-webview.json  desktop.json  manage-webviews.json  migrated.json  oauth-twitch.json  plugins.json
src-tauri/src/: main.rs
src-tauri/src/services/: mod.rs  osc.rs  uwu.rs
src-tauri/src/services/audio/: mod.rs
src-tauri/src/services/custom_tts/: mod.rs
src-tauri/src/services/keyboard/: mod.rs
src-tauri/src/services/piper_tts/: mod.rs
src-tauri/src/services/translate/: mod.rs
src-tauri/src/services/uberduck_tts/: mod.rs
src-tauri/src/services/web/: assets.rs  mod.rs  peer.rs  pubsub.rs
src-tauri/src/services/whisper_stt/: mod.rs  vad.rs  whisper.rs
src-tauri/src/services/windows_tts/: mod.rs  windows.rs
src-tauri/src/utils/: mod.rs
src/client/elements/text/: index.tsx  schema.ts  style.ts
src/client/schema/: index.ts
src/client/services/document/: index.ts
src/client/services/files/: index.ts
src/client/services/sound/: index.ts
src/server/: index.ts
src/server/services/discord/: index.ts
src/server/services/keyboard/: index.ts
src/server/services/migration/: IMigration.ts  index.ts  types.ts
src/server/services/migration/migrations/: devGrantMicAccess.ts  grantMicAccess.ts  index.ts  renameNative.ts  test.ts
src/server/services/obs/: index.ts  types.ts
src/server/services/sound/: index.ts
src/server/services/state/: index.ts
src/server/services/stt/: index.ts  schema.ts  stt_data.ts
src/server/services/stt/services/: webspeechapi.ts  whisper.ts
src/server/services/translation/: index.ts  schema.ts
src/server/services/translation/services/: azure.ts  libreTranslate.ts
src/server/services/tts/: index.ts  schema.ts  tts_data.ts
src/server/services/tts/services/: custom.ts  piper.ts  uberduck.ts  webspeechapi.ts  windows.ts
src/server/services/twitch/: emote_loaders.ts  index.ts  types.ts
src/server/services/vrc/: index.ts
src/server/services/vrc/targets/: utils.ts
src/server/ui/: actionbar.tsx  background-input.module.css  editor-view.tsx  logo.tsx
src/server/ui/dropdown/: Dropdown.tsx  Tooltip.tsx
src/server/ui/inspector/: index.tsx  inspector_files.tsx  inspector_scenes.tsx  inspector_stt.tsx  inspector_text.tsx  inspector_translation.tsx  inspector_tts.tsx  inspector_twitch.tsx
src/server/ui/inspector/components/: transform-input.tsx
src/server/ui/inspector/components/input/: index.tsx
src/shared/services/pubsub/: index.ts
src/utils/: index.ts
