[workspace]
members = [ "src-tauri", "dev-tools" ]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0-pre"
authors = [ "The curses Contributors" ]
repository = "https://github.com/taliyahwebb/curses"
description = "Speech to Text (to Speech) app with various service options"
readme = "README.md"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
