[package]
name = "dev-tools"
edition = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = "README.md"
description = "development tools to automate some workloads"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
