[package]
name = "curses"
edition = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [ "config-toml" ] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
window-shadows = "^0.2"
uwuify = "^0.2"
itertools = "0.14"
rosc = "0.10.1"
warp = "^0.3"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
local-ip-address = "0.6.3"
rodio = "^0.20"
reqwest = { version = "0.12.12", features = ["json"] }
tempfile = "3.15.0"
which = "7.0.1"
ringbuf = "0.4.7"
earshot = "0.1.0"
whisper-rs = "0.13.2"
tauri-plugin-window-state = { version = "2" }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
wav_io = "0.1.15"
samplerate = "0.2.4"
tauri-plugin-global-shortcut = "2"

[dependencies.tauri]
version = "2"
features = [ "config-toml" ]

[dependencies.windows]
version = "0.59"
features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_Speech",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_TextServices",
  "Win32_UI_WindowsAndMessaging",
]

[features]
default = ["custom-protocol", "vulkan"]
background_input = []
custom-protocol = ["tauri/custom-protocol"]
vulkan = ["whisper-rs/vulkan"]

